--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 
   font-family: 'Roboto', sans-serif;
   font-weight: var(--bold-font-weight);
-  letter-spacing: var(--letter-spacing);
+  letter-spacing: var(--primery-letter-spacing);
 }
 img {
   display: block;
@@ -782,6 +782,9 @@ img {
   position: fixed;
   top: 0%;
   left: 0%;
+  transition-property: opacity;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   width: 100%;
   height: 100%;
@@ -796,12 +799,13 @@ img {
 
 .hero-model-window {
   position: absolute;
-  transform: translate(-50%, -50%);
-
-  min-width: 528px;
-  min-height: 581px;
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 528px;
+  min-height: 581px;
+  padding: 40px;
 
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -810,7 +814,7 @@ img {
 }
 
 .close {
-  position: relative;
+  position: absolute;
   left: 490px;
   top: 8px;
 
@@ -819,6 +823,10 @@ img {
 }
 
 .close-btn {
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -830,8 +838,174 @@ img {
   border-radius: 50%;
 }
 
+.close-btn:hover,
+.close-btn:focus {
+  background-color: red;
+  -moz-outline-radius: 50%;
+}
+
 .close-icon {
   fill: var(--black-color);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn:hover .close-icon,
+.close-btn:focus .close-icon {
+  fill: var(--primary-white-color);
 }
 
 /* END MODAL WINDOW */
+
+/* CONTACT FORM */
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-form-title {
+  margin-bottom: 12px;
+  margin-top: 2px;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--secondary-text-color);
+}
+
+.contact-form-input {
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  width: 100%;
+  height: 40px;
+  padding-left: 42px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.contact-form-input:focus,
+.contact-form-input:hover {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.modal-form-massage {
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  width: 100%;
+  height: 120px;
+  margin-bottom: 20px;
+  padding: 12px 16px;
+  resize: none;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.modal-form-massage:focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.contact-form-label {
+  margin-bottom: 4px;
+
+  font-weight: var(--regular-font-weight);
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+}
+
+.modal-form-input-wrapper {
+  position: relative;
+  width: 100%;
+  height: 40px;
+  margin-bottom: 10px;
+}
+
+.modal-form-icon {
+  position: absolute;
+  top: 50%;
+  left: 2%;
+  transform: translateY(-50%);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  fill: var(--secondary-text-color);
+}
+
+.contact-form-input:focus + .modal-form-icon,
+.contact-form-input:hover + .modal-form-icon {
+  fill: var(--accent-color);
+}
+
+.modal-check-consent {
+  display: inline-block;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.modal-form-label-policy::before {
+  content: '';
+  display: block;
+  width: 16px;
+  height: 15px;
+
+  background-color: var(--primary-white-color);
+  border-radius: 2px;
+  border: 1px solid var(--primary-text-color);
+}
+
+.modal-form-check-policy:checked + .modal-form-label-policy::before {
+  background-image: url(../images/icons/check.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border: none;
+}
+
+.modal-form-label-policy {
+  font-weight: var(--regular-font-weight);
+  font-size: 14px;
+  line-height: 1.71;
+  margin-bottom: 30px;
+}
+
+.form-contract-link {
+  color: var(--accent-color);
+}
+.modal-form-button {
+  align-items: center;
+  text-align: center;
+  width: 200px;
+  min-height: 50px;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  letter-spacing: 0.06em;
+  font-weight: var(--bold-font-weight);
+  font-size: 16px;
+  line-height: 1.87;
+
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.modal-form-button:focus,
+.modal-form-button:hover {
+  background-color: var(--secondary-accent-color);
+}
+
+/* END CONTACT FORM */
